--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ Homework1
 </h1>
 <h2>Demo</h2>
 <p> My name is Ankit Shah and my ucid is aps86.</p>
+<a href="https://www.google.com">Google</a>
 </body>
 </html>
