--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Homework1
 <h2>Demo</h2>
 <p> My name is Ankit Shah and my ucid is aps86.</p>
 <a href="https://www.google.com">Google</a><br>
-<b> Web Systems Developement </b>
+<b> Web Systems Developement </b><br>
+<hr> Hello, Everyone </hr>
 </body>
 </html>
